PORTFOLIO : Add accessibility for the logos, hover and focus events.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,30 @@
 
   <body>
     <header class="header">
-      <div class="logo">
-        <a href="./vanillaJS/indexAppServices.html" target="_blank">
-          <img src="./img/happyCode.drawio.png" alt="Manuel Lab" />
+      <div class="logo__lab">
+        <a
+          class="logo__lab-link"
+          href="./vanillaJS/indexAppServices.html"
+          target="_blank"
+        >
+          <img
+            class="logo__lab-img"
+            src="./img/happyCode.drawio.png"
+            alt="Manuel Lab"
+          />
         </a>
       </div>
-      <div class="logo_youtube">
+      <div class="logo__youtube">
         <a
+          class="logo__youtube-link"
           href="https://youtu.be/IcO2TwI5zvw?si=hWIM0C9XvRtAJCP7"
           target="_self"
         >
-          <img src="./img/youtube-logo.png" alt="Youtube channel for Manuel" />
+          <img
+            class="logo__youtube-img"
+            src="./img/youtube_logo_sm.png"
+            alt="Youtube channel for Manuel"
+          />
         </a>
       </div>
       <!-- <button class="nav-toggle" aria-label="taggle navigation">
