PORTFOLIO : Add accessibility, tab navigation by sections.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </header>
 
     <!--Home Introduction-->
-    <section class="intro" id="home">
+    <section tabindex="0" class="intro" id="home">
       <h1 class="section__title section__title--intro">
         Hi, I am <strong>Manuel Arias</strong>
       </h1>
@@ -98,7 +98,7 @@
     </section>
 
     <!--My Services-->
-    <section class="my-services" id="services">
+    <section tabindex="0" class="my-services" id="services">
       <h2 class="section__title section__title--services">What I do</h2>
 
       <div class="services">
@@ -141,7 +141,7 @@
     </section>
 
     <!--About section-->
-    <section class="about-me" id="about">
+    <section tabindex="0" class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
         Passionate developer based in Medellín - Colombia
@@ -172,7 +172,7 @@
     </section>
 
     <!--My Work section-->
-    <section class="my-work" id="work">
+    <section tabindex="0" class="my-work" id="work">
       <h2 class="section__title section__title--work">My work</h2>
       <p class="secction__subtitle section__subtitle--work">
         Selection of my range work
