PORTFOLIO : Update links to the tools used.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <!--portfolio image 2-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://www.youtube.com/watch?v=IcO2TwI5zvw"
           class="portfolio__item"
           target="_blank"
         >
@@ -207,7 +207,7 @@
 
         <!--portfolio image 4-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://github.com/mgallegoa/vue-trello-pinia"
           class="portfolio__item"
           target="_blank"
         >
@@ -216,7 +216,7 @@
 
         <!--portfolio image 5-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://www.credly.com/users/manuel-fernando-gallego-arias/badges#credly"
           class="portfolio__item"
           target="_blank"
         >
@@ -225,7 +225,7 @@
 
         <!--portfolio image 6-->
         <a
-          href="https://manuel-proxy-add-cors.herokuapp.com/"
+          href="https://github.com/mgallegoa/csv-node-react"
           class="portfolio__item"
           target="_blank"
         >
@@ -234,7 +234,7 @@
 
         <!--portfolio image 7-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://youtube.com/@mgallegoarias?si=rKWuJTE0korU29Kj"
           class="portfolio__item"
           target="_blank"
         >
@@ -243,7 +243,7 @@
 
         <!--portfolio image 8-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://youtube.com/@mgallegoarias?si=rKWuJTE0korU29Kj"
           class="portfolio__item"
           target="_blank"
         >
@@ -252,7 +252,7 @@
 
         <!--portfolio image 9-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://hub.docker.com/u/manuelarias"
           class="portfolio__item"
           target="_blank"
         >
@@ -261,7 +261,7 @@
 
         <!--portfolio image 10-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://www.youtube.com/watch?v=q2sJKXxLbK8"
           class="portfolio__item"
           target="_blank"
         >
@@ -270,7 +270,7 @@
 
         <!--portfolio image 11-->
         <a
-          href="./vanillaJS/indexAppServices.html"
+          href="https://www.youtube.com/watch?v=klW0c4CJZo8"
           class="portfolio__item"
           target="_blank"
         >
