PORTFOLIO : Add youtube social network.

--- a/index.html
+++ b/index.html
@@ -306,6 +306,14 @@
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
+        <li class="social-list__item">
+          <a
+            class="social-list__link"
+            href="https://www.youtube.com/@mgallegoarias"
+          >
+            <i class="fab fa-youtube"></i>
+          </a>
+        </li>
       </ul>
     </footer>
   </body>
