PORTFOLIO : Fix performance and accessibility issues.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Manuel is a Software Enginner with more than 
+           15 years of experience working with small and big companies 
+           helping to solve big problems with great solutions. Here is 
+           my portfolio"
+    />
     <link
       rel="apple-touch-icon"
       href="https://www.gravatar.com/avatar/dd43ba3e67fd9efdb57c9b60b16c4306.jpg?s=40"
@@ -92,7 +99,7 @@
       </p>
       <img
         class="intro__img"
-        src="https://www.gravatar.com/avatar/dd43ba3e67fd9efdb57c9b60b16c4306.jpg?s=450"
+        src="https://www.gravatar.com/avatar/dd43ba3e67fd9efdb57c9b60b16c4306.jpg?s=224"
         alt="A picture of Manuel Arias"
       />
     </section>
@@ -166,7 +173,7 @@
 
       <img
         class="about-me__img"
-        src="https://www.gravatar.com/avatar/dd43ba3e67fd9efdb57c9b60b16c4306.jpg?s=500"
+        src="https://www.gravatar.com/avatar/dd43ba3e67fd9efdb57c9b60b16c4306.jpg?s=224"
         alt="A picture of Manuel Arias"
       />
     </section>
@@ -256,7 +263,7 @@
           class="portfolio__item"
           target="_blank"
         >
-          <img src="img/portfolio09.png" alt="9" class="portfolio__img" />
+          <img src="img/portfolio09.jpg" alt="9" class="portfolio__img" />
         </a>
 
         <!--portfolio image 10-->
@@ -286,7 +293,11 @@
       </a>
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="https://github.com/mgallegoa">
+          <a
+            class="social-list__link"
+            href="https://github.com/mgallegoa"
+            aria-label="Go to my personal Git Hub repositories profile"
+          >
             <i class="fab fa-github"></i>
           </a>
         </li>
@@ -294,6 +305,7 @@
           <a
             class="social-list__link"
             href="https://hub.docker.com/u/manuelarias"
+            aria-label="Go to my personal docker containers profile"
           >
             <i class="fab fa-docker"></i>
           </a>
@@ -302,6 +314,7 @@
           <a
             class="social-list__link"
             href="http://www.linkedin.com/in/manuel-fernando-gallego-arias"
+            aria-label="Go to my personal LinkedIn profile"
           >
             <i class="fab fa-linkedin"></i>
           </a>
@@ -310,6 +323,7 @@
           <a
             class="social-list__link"
             href="https://www.youtube.com/@mgallegoarias"
+            aria-label="Go to my personal youtube channel"
           >
             <i class="fab fa-youtube"></i>
           </a>
