PORTFOLIO : Add content for the portfolio.

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           <p>
             I worked with many front end technologies, the most relevant to
             mention and recently used are: HTML, CSS, JavaScript, JQuery, React,
-            Angular, WebSockets, Docker, consuming REST Services and using
-            GraphQL schemas to get the data from the back-end.
+            Angular, VUE, WebSockets, Docker, consuming REST-Full Services and
+            using GraphQL schema to get the data from the back-end.
           </p>
         </div>
         <!--close service-->
@@ -124,10 +124,10 @@
           <h3>Back-end Dev</h3>
           <p>
             With a long experience with backend systems, the more relevant
-            experience is working with Java using the Programing Object Orient
-            paradigm and recently using the declarative approach to create pure
-            functions with the most recently Java API, some backend
-            technologies: Java and Kotlin with Spring Framework, Microsoft C#.
+            experience is working with Java using the Programming Object Orient
+            paradigm and using lambda functions to create pure functions with
+            the most recently Java API, some backend technologies: Java and
+            Kotlin with Spring Framework, Microsoft C#.
           </p>
         </div>
         <!--close service-->
@@ -138,7 +138,8 @@
             Working with different Architectures for the systems and given the
             best solution for the business. I worked with the next, most used
             architectures: N layer, Modular Monolith, Micro services,
-            Serverless. Working with different pipelines for CI/CD with testing.
+            Serverless, Event Driven, SOA. Working with different pipelines for
+            CI/CD with testing.
           </p>
         </div>
         <!--close service-->
@@ -155,18 +156,20 @@
       </p>
       <div class="about-me__body">
         <p>
-          I have 12 years working in JavaScript (Angular, React, Vue), Java
-          Language Develop and Oracle Database + 1 year in Microsoft C#, + 1
-          year with Kotlin Program Language with Android, cloud skills and too
-          many tools around that technologies. I had the opportunity to
-          technically lead the development teams, helping to solve difficult
-          problems. I like to put special attention to details and quality, for
-          making happy stakeholders. Working teaming up with business analysts,
-          design specialists, infrastructure architects, software architects and
-          many stakeholders of the projects.
+          I have 15 years working in Java Language Develop, JavaScript (Angular,
+          React, Vue), Spring Framework (Web, JPA, OpenAI, etc), Cloud Computing
+          AWS, Oracle Database + 1 year in Microsoft C#, + 1 year with Kotlin
+          Program Language with Android, cloud skills and too many tools around
+          that technologies. I had the opportunity to technically lead the
+          development teams, helping to solve difficult problems. I like to put
+          special attention to details and quality, for making happy
+          stakeholders. Working teaming up with business analysts, design
+          specialists, infrastructure architects, software architects and many
+          stakeholders of the projects. In the past 7 years, helping USA
+          companies (and from all the world) with their complex software.
         </p>
         <p>
-          Current interest in Serverless and Reactive Systems (Actors Model) and
+          Current interest in Reactive Systems (Actors Model), AI solutions and
           work on systems with a high throughput.
         </p>
       </div>
