PORTFOLIO : Add link and complete resume to download from portfolio.

--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
           Current interest in Reactive Systems (Actors Model), AI solutions and
           work on systems with a high throughput.
         </p>
+        <p class="about-me__resume">
+          <a
+            href="./Resume_Manuel_Fernando_Gallego_Arias.pdf"
+            class="btn"
+            target="_blank"
+            >Complete Resume</a
+          >
+        </p>
       </div>
 
       <img
