PORTFOLIO : Add kotlin to the portfolio.

--- a/index.html
+++ b/index.html
@@ -294,6 +294,15 @@
         >
           <img src="img/portfolio11.jpg" alt="10" class="portfolio__img" />
         </a>
+
+        <!--portfolio image 12-->
+        <a
+          href="https://www.youtube.com/watch?v=klW0c4CJZo8"
+          class="portfolio__item"
+          target="_blank"
+        >
+          <img src="img/portfolio12.jpg" alt="10" class="portfolio__img" />
+        </a>
       </div>
     </section>
 
